style: fix contrast of unverified color and status bar background in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -62,9 +62,9 @@
 	--key-color: 132 170 220;
 	--holder-color: 166 145 125;
 	--special-color: 84 171 133;
-	--unverified-color: 103 109 112;
+	--unverified-color: 130 134 135;
 	--number-color: 215 140 71;
-	--status-bar-background: 14 11 25;
+	--status-bar-background: 16 9 28;
 	--command-color: 157 137 164;
 	--anchor-color: 137 192 212;
 	--visited-color: 174 137 255;
